--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,13 @@
-html {
-  background-color: white; }
+html,
+body,
+ul,
+ol {
+  margin: 0;
+  padding: 0; }
+
+body {
+  font: 100% "Helvetica Neue", "Helvetica", sans-serif;
+  background-color: #efefef; }
 
 p.important {
   color: red; }
