--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,11 +1,4 @@
-// base.scss
-
-@import 'reset';
-
-body {
-  font: 100% "Helvetica Neue", "Helvetica", sans-serif;
-  background-color: #efefef;
-}
+@import 'base';
 
 p.important {
   color: red;
